Boolean -> boolean for database models